Removed unecessary files.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
               <p>
                 Check out the source code on GitHub or download an APK for your device,
                 the choice is yours!
+                <br>
+                &nbsp;
               </p>
             </div>
             <a class="btn btn-info" href="#">
