--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     </style>
   </head>
   <body>
+  	<!--#include="navbar.html" -->
+  	<!--
     <div id="navbar" class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container-fluid">
@@ -51,6 +53,7 @@
         </div>
       </div>
     </div>
+	-->
     <div class="container">
       <div class="hero-unit">
         <div>
@@ -132,32 +135,6 @@
         <p style="text-align: center;">
           Developed by @mikesandt and @brianedmonds90
         </p>
-      </div>
-    </div>
-    <div id="navbar" class="navbar navbar-fixed-top navbar-inverse">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="brand" href="#">
-            GRAVITY BALL
-          </a>
-          <ul class="nav">
-            <li>
-              <a href="#">
-                Instructions
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Downloads
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Contact
-              </a>
-            </li>
-          </ul>
-        </div>
       </div>
     </div>
 
