--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
     </style>
   </head>
   <body>
-  	<!--#include="navbar.html" -->
-  	<!--
     <div id="navbar" class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container-fluid">
@@ -49,11 +47,14 @@
                 Downloads
               </a>
             </li>
+            <li>
+            	<a href="#">
+            		Contact Us
+            	</a>
           </ul>
         </div>
       </div>
     </div>
-	-->
     <div class="container">
       <div class="hero-unit">
         <div>
