--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
       <hr>
       <div>
         <p style="text-align: center;">
-          Developed by @mikesandt and @brianedmonds90
+          Developed by <a href="www.twitter.com/mikesandt">@mikesandt</a> 
+          and <a href="www.twitter.com/brianedmonds90">@brianedmonds90
         </p>
       </div>
     </div>
