Added rest of html files with dummy text

--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
     <div id="navbar" class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="#">
+          <a class="brand" href="index.html">
             GRAVITY BALL
           </a>
           <ul class="nav">
             <li>
-              <a href="#">
+              <a href="instructions.html">
                 Instructions
               </a>
             </li>
             <li>
-              <a href="#">
-                Downloads
-              </a>
+				<a href="downloads.html">
+				Downloads
+				</a>
             </li>
             <li>
-            	<a href="#">
+            	<a href="contact.html">
             		Contact Us
             	</a>
           </ul>
@@ -82,7 +82,7 @@
                 ODE. Learn to play Gravity Ball today!
               </p>
             </div>
-            <a class="btn btn-info" href="#">
+            <a class="btn btn-info" href="instructions.html">
               Learn More
             </a>
           </div>
@@ -104,7 +104,7 @@
                 &nbsp;
               </p>
             </div>
-            <a class="btn btn-info" href="#">
+            <a class="btn btn-info" href="downloads.html">
               Git It!
             </a>
           </div>
@@ -125,7 +125,7 @@
                 &nbsp;
               </p>
             </div>
-            <a class="btn btn-info" href="#">
+            <a class="btn btn-info" href="contact.html">
               Contact
             </a>
           </div>
@@ -134,8 +134,8 @@
       <hr>
       <div>
         <p style="text-align: center;">
-          Developed by <a href="www.twitter.com/mikesandt">@mikesandt</a> 
-          and <a href="www.twitter.com/brianedmonds90">@brianedmonds90
+          Developed by <a href="http://www.twitter.com/mikesandt">@mikesandt</a> 
+          and <a href="http://www.twitter.com/brianedmonds90">@brianedmonds90
         </p>
       </div>
     </div>
