--- a/downloads.html
+++ b/downloads.html
@@ -45,12 +45,12 @@
             </a>
           </li>
           <li class="active">
-            <a href="#">
+            <a href="downloads.html">
               Downloads
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="contact.html">
               Contact Us
             </a>
           </li>
