Fixed page link from downloads

--- a/downloads.html
+++ b/downloads.html
@@ -73,7 +73,7 @@
               </h2>
               <!-- GitHub -->
               <span style="color: rgb(55, 55, 55); font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 19px;">
-                Umami single-origin coffee iphone brunch, 8-bit brooklyn minim artisan williamsburg swag banh mi occaecat. Austin narwhal banksy, elit ex wayfarers farm-to-table retro deep v gentrify forage tofu id ethnic nihil. 8-bit mustache exercitation banksy, narwhal hella semiotics pug occaecat vegan retro cliche banh mi. Velit eu wes anderson plaid fap retro. Tofu hella gastropub forage, 8-bit keytar cupidatat. Delectus ethnic deep v, whatever next level bushwick etsy pitchfork. Incididunt seitan gentrify odio cupidatat viral, scenester mustache retro cardigan squid id.
+                Umami single-origin coffee iphone brunch, 8-bit brooklyn minim artisan williamsburg swag banh mi occaecat. Austin narwhal banksy, elit ex wayfarers farm-to-table retro deep v gentrify forage tofu id ethnic nihil. 8-bit mustache exercitation banksy, narwhal hella semiotics pug occaecat vegan retro cliche banh mi. Velit eu wes anderson plaid fap retro. Tofu hella gastropub forage, 8-bit keytar cupidatat. Delectus ethnic deep v, whatever next level bushwick etsy pitchfork. Incididunt seitan gentrify odioo cupidatat viral, scenester mustache retro cardigan squid id.
               </span>
             </p>
           </div>
