Filled in content for instructions

--- a/instructions.html
+++ b/instructions.html
@@ -9,12 +9,14 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <!-- Le styles -->
+  
   <link href="assets/css/bootstrap.css" rel="stylesheet">
   <style>
     body { padding-top: 60px; /* 60px to make the container go all the way
     to the bottom of the topbar */ }
   </style>
   <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="assets/css/styles.css" rel="stylesheet">
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
@@ -71,37 +73,28 @@
               <h2>
                 Installing the game
               </h2>
+              
               <!-- INSTALLING -->
-              <span style="color: rgb(55, 55, 55); font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 19px;">
-                Cliche vice single-origin coffee retro actually pickled, terry richardson
-                skateboard fixie street art. Pinterest food truck tofu, pickled banksy
-                meggings direct trade 8-bit art party locavore VHS mcsweeney's cardigan.
-                Pitchfork scenester freegan terry richardson meggings. Beard sustainable
-                ethnic cosby sweater. Photo booth mcsweeney's ugh single-origin coffee
-                food truck actually blog typewriter, leggings gluten-free. Quinoa pop-up
-                mumblecore, gastropub biodiesel jean shorts chillwave freegan. Jean shorts
-                ethnic stumptown, gastropub fixie hashtag whatever ethical tumblr.
-              </span>
+              If you havent already, either download the APK file or get the source code from GitHub if you're feeling adventurous
+              <h4>The Easy Way</h4>
+              Next, plug your Android device into your computer via the USB cable provided. If you downloaded the APK file simply copy it to your device's SD card. The device should prompt you to install the application. Next, open your app drawer and launch the Gravity Ball application.
+              <h4>The Harder Way</h4>
+              If you decided to obtain the source code from GitHub first, please reference the downloads page for instructions on setting up your environment. Once you've completed these steps you simply need to hit run with your device plugged in!
             </p>
+            <a class="btn btn-info" href="downloads.html">
+              Downloads
+            </a>
           </div>
         </div>
       <div class="well">
         <div>
           <p>
-            <h2>
-              Ground Rules
-            </h2>
+            <h2>Ground Rules</h2>
             <!-- GROUND RULES -->
-            <span style="color: rgb(55, 55, 55); font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 19px;">
-              Fixie lomo flannel, quinoa pop-up ethical dreamcatcher shoreditch semiotics
-              DIY street art selfies. Carles sustainable tousled twee ethnic aesthetic.
-              Tumblr quinoa sartorial disrupt trust fund, etsy actually wolf kale chips
-              YOLO street art. Aesthetic YOLO letterpress, gentrify mumblecore locavore
-              lo-fi messenger bag. Authentic selvage bushwick, next level umami blog
-              readymade gluten-free brunch messenger bag sustainable master cleanse craft
-              beer gastropub. Godard forage hoodie sustainable skateboard. Actually selfies
-              synth, wes anderson letterpress direct trade tumblr organic.
-            </span>
+            <h4>Objective</h4>
+            The objective of gravity ball is simple, use your paddle to send the apple flying into the goal area to score points. Let the ball touch the opposite side of the arena and you lose a point. Score 10 points and you win!
+            <h4>How to Play</h4>
+            In order to score points you're going to have to learn how to manipulate the paddle first. The logic behind paddle movement is fairly trivial, so don't get too worked up. When you place your fingers on the screen each side of the paddle will attach a 'spring' to where your fingers are located. The faster you move your fingers the faster the paddle will move. Be careful, it's pretty difficult!
           </p>
         </div>
       </div>
@@ -110,7 +103,7 @@
     <div>
       <p style="text-align: center;">
           Developed by <a href="http://www.twitter.com/mikesandt">@mikesandt</a> 
-          and <a href="http://www.twitter.com/brianedmonds90">@brianedmonds90
+          and <a href="http://www.twitter.com/brianedmonds90">@brianedmonds90</a>
       </p>
     </div>
   </div>
