Cleaned up and ready for showtime

--- a/contact.html
+++ b/contact.html
@@ -70,9 +70,11 @@
           <div class="well">
             <p>
               <h2>Brian Edmonds</h2>
-              <span style="color: rgb(55, 55, 55); font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 19px;">
-                Fashion axe sustainable pitchfork lo-fi sriracha. Pour-over before they sold out ex brooklyn, ullamco flexitarian in gentrify pop-up post-ironic food truck mustache odio dolore. Assumenda non keffiyeh, craft beer sustainable skateboard mlkshk id gentrify pickled tonx pariatur esse mollit beard. Fap banh mi hashtag dolore. Pop-up swag post-ironic sapiente, mustache deep v banh mi photo booth et. Williamsburg mixtape banksy, pork belly fap echo park sriracha readymade vero mcsweeney's nihil pitchfork. Semiotics letterpress nesciunt, keytar dolor bespoke fap sustainable portland pop-up.
-              </span>
+              <img src="assets/photos/brian2.jpg" height="23%" width="23%" class="img-rounded pull-right">
+                My name is Brian Edmonds and I'm working toward a Computer Science degree from Georgia Tech. We were able to bring the project to production in just under 10 days. Needless to say it was a sprint from beginning to end. Developing Gravity Ball was an exciting challenge and I hope you enjoy it. I like to spend my free time hanging with my family and friends and riding my bike. If youd like to contact me about the game dont hesitate!
+                <br></br>
+              <h2>Got a Question for Me?</h2>
+                You can email me at <a href="mailto:brianedmonds90@gmail.com">brianedmonds90@gmail.com</a>
             </p>
           </div>
         </div>
@@ -80,20 +82,37 @@
           <div class="well">
             <p>
               <h2>Mike Sandt</h2>
-              <span style="color: rgb(55, 55, 55); font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 19px;">
-                Mollit high life Austin stumptown, vinyl letterpress trust fund lomo odd future. Cardigan gluten-free squid readymade, iphone post-ironic locavore irony flannel high life. Art party fixie banh mi pinterest, four loko 8-bit gentrify pickled. Accusamus sunt velit, dreamcatcher pariatur banksy irony biodiesel plaid meh id lo-fi. DIY occupy gentrify, lo-fi placeat post-ironic occaecat direct trade veniam pitchfork. Beard occupy ennui consequat, salvia twee 3 wolf moon. Typewriter echo park pork belly selfies trust fund non, vegan lo-fi put a bird on it etsy.
-              </span>
+              <img src="assets/photos/mike.jpg" height="25%" width="25%" class="img-rounded pull-right">
+                Hi! I'm Mike. I'm a fourth year CS student with concentrations in media and intelligence. Currently, I'm interested in pursuing the fields of machine learning and Game AI. As well, I do web development for multiple projects. When not developing I enjoy playing ice hockey, cycling, strumming the six string and drinking craft beer. I really hope you like Gravity Ball, Brian and I put a lot of ourselves into this project.
+                <br></br>
+              <h2>Got a Question for Me?</h2>
+                You can email me at <a href="mailto:michael.sandt@gmail.com">michael.sandt@gmail.com</a>
             </p>
           </div>
         </div>
       </div>
-      <h1>Questions, Comments or Suggestions?</h1>
+      <h1>Want to Contribute?</h1>
+      <p>If you'd like to make improvements to the game or use it as a basis for your own feel free. You can submit a pull request on GitHub with your feature and we'll integrate it!</p>
     </div>
     <hr>
     <div>
       <p style="text-align: center;">
+          <iframe src="github-btn.html?user=brianedmonds90&repo=Pong&type=watch"
+        allowtransparency="true" frameborder="0" scrolling="0" width="50" height="20"></iframe>
+        <iframe src="github-btn.html?user=brianedmonds90&repo=Pong&type=fork"
+        allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe>
+        <iframe src="github-btn.html?user=brianedmonds90&type=follow"
+        allowtransparency="true" frameborder="0" scrolling="0" width="168" height="20"></iframe>
+        <iframe src="github-btn.html?user=msandt3&type=follow"
+        allowtransparency="true" frameborder="0" scrolling="0" width="125" height="20"></iframe>
+      </p>
+      <p style="text-align: center;">
           Developed by <a href="http://www.twitter.com/mikesandt">@mikesandt</a> 
-          and <a href="http://www.twitter.com/brianedmonds90">@brianedmonds90
+          and <a href="http://www.twitter.com/brianedmonds90">@brianedmonds90</a>
+      </p>
+      <p style="text-align: center;">
+          Built with <a href="http://www.jbox2d.org/">JBox2D</a> 
+          and <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>
       </p>
     </div>
   </div>
