--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
     <div class="container">
       <div class="hero-unit">
         <div>
+        	<img src="assets/photos/apple.png" height="12%" width="12%" style="float:right">
           <h1>
             GRAVITY BALL
           </h1>
+          
           <p>
-            Sir Issac Newton would be proud!
+            A challenging physics based touchscreen experience. The most fun you can have at 9.8 meters per second squared. Sir Issac Newton would be proud!
           </p>
         </div>
       </div>
@@ -79,8 +81,8 @@
             </h3>
             <div>
               <p>
-                Simple enough to model analytically and stable enough for a first order
-                ODE. Learn to play Gravity Ball today!
+                Everyone has to start somewhere. Learn the rules and objectives before diving in!
+                <br></br>
               </p>
             </div>
             <a class="btn btn-info" href="instructions.html">
@@ -101,8 +103,7 @@
               <p>
                 Check out the source code on GitHub or download an APK for your device,
                 the choice is yours!
-                <br>
-                &nbsp;
+                <br></br>
               </p>
             </div>
             <a class="btn btn-info" href="downloads.html">
@@ -122,8 +123,7 @@
             <div>
               <p>
                 Questions, comments or improvements? We're excited to hear your feedback!
-                <br>
-                &nbsp;
+                <br></br>
               </p>
             </div>
             <a class="btn btn-info" href="contact.html">
@@ -133,10 +133,27 @@
         </div>
       </div>
       <hr>
+      <div style="float: center">
+	        
+	  </div>
       <div>
+      	<p style="text-align: center;">
+        	<iframe src="github-btn.html?user=brianedmonds90&repo=Pong&type=watch"
+  			allowtransparency="true" frameborder="0" scrolling="0" width="50" height="20"></iframe>
+  			<iframe src="github-btn.html?user=brianedmonds90&repo=Pong&type=fork"
+  			allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe>
+  			<iframe src="github-btn.html?user=brianedmonds90&type=follow"
+  			allowtransparency="true" frameborder="0" scrolling="0" width="168" height="20"></iframe>
+  			<iframe src="github-btn.html?user=msandt3&type=follow"
+  			allowtransparency="true" frameborder="0" scrolling="0" width="125" height="20"></iframe>
+  		</p>
         <p style="text-align: center;">
           Developed by <a href="http://www.twitter.com/mikesandt">@mikesandt</a> 
-          and <a href="http://www.twitter.com/brianedmonds90">@brianedmonds90
+          and <a href="http://www.twitter.com/brianedmonds90">@brianedmonds90</a>
+        </p>
+        <p style="text-align: center;">
+          Built with <a href="http://www.jbox2d.org/">JBox2D</a> 
+          and <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>
         </p>
       </div>
     </div>
