--- a/instructions.html
+++ b/instructions.html
@@ -67,7 +67,7 @@
       <h1>
         Instructions
       </h1>
-        <div class="well">
+        <div class="well textwell">
           <div>
             <p>
               <h2>
@@ -86,7 +86,7 @@
             </a>
           </div>
         </div>
-      <div class="well">
+      <div class="well textwell">
         <div>
           <p>
             <h2>Ground Rules</h2>
@@ -102,8 +102,22 @@
     <hr>
     <div>
       <p style="text-align: center;">
+          <iframe src="github-btn.html?user=brianedmonds90&repo=Pong&type=watch"
+        allowtransparency="true" frameborder="0" scrolling="0" width="50" height="20"></iframe>
+        <iframe src="github-btn.html?user=brianedmonds90&repo=Pong&type=fork"
+        allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe>
+        <iframe src="github-btn.html?user=brianedmonds90&type=follow"
+        allowtransparency="true" frameborder="0" scrolling="0" width="168" height="20"></iframe>
+        <iframe src="github-btn.html?user=msandt3&type=follow"
+        allowtransparency="true" frameborder="0" scrolling="0" width="125" height="20"></iframe>
+      </p>
+      <p style="text-align: center;">
           Developed by <a href="http://www.twitter.com/mikesandt">@mikesandt</a> 
           and <a href="http://www.twitter.com/brianedmonds90">@brianedmonds90</a>
+      </p>
+      <p style="text-align: center;">
+          Built with <a href="http://www.jbox2d.org/">JBox2D</a> 
+          and <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>
       </p>
     </div>
   </div>
