--- a/downloads.html
+++ b/downloads.html
@@ -15,6 +15,7 @@
     to the bottom of the topbar */ }
   </style>
   <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="assets/css/styles.css" rel="stylesheet">
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
@@ -65,38 +66,53 @@
       <h1>
         Downloads
       </h1>
-        <div class="well">
+        <div class="well textwell">
           <div>
             <p>
-              <h2>
-                Compile Source From GitHub
-              </h2>
+              <h2>Compile Source From GitHub</h2>
               <!-- GitHub -->
-              <span style="color: rgb(55, 55, 55); font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 19px;">
-                Umami single-origin coffee iphone brunch, 8-bit brooklyn minim artisan williamsburg swag banh mi occaecat. Austin narwhal banksy, elit ex wayfarers farm-to-table retro deep v gentrify forage tofu id ethnic nihil. 8-bit mustache exercitation banksy, narwhal hella semiotics pug occaecat vegan retro cliche banh mi. Velit eu wes anderson plaid fap retro. Tofu hella gastropub forage, 8-bit keytar cupidatat. Delectus ethnic deep v, whatever next level bushwick etsy pitchfork. Incididunt seitan gentrify odioo cupidatat viral, scenester mustache retro cardigan squid id.
-              </span>
+              <h4>Setting up your Development Environment</h4>
+                First, download the Android SDK <a href="http://developer.android.com/sdk/index.html">here</a> and follow the instructions for setting up the ADT bundle or an existing IDE like Eclipse.
+              <h4>Getting the Source Code</h4>
+                First make sure you have Git installed. Open a terminal and clone the repository to your local machine.
+                <div class="commandwell">
+                  <p>$ git clone https://github.com/brianedmonds90/Pong.git</p>
+                </div>
+              <h4>Compiling and Running</h4>
+                Assuming you're using Eclipse, simply import the source code and click run. It's really that simple!
             </p>
           </div>
         </div>
-      <div class="well">
+      <div class="well textwell">
         <div>
           <p>
-            <h2>
-              Download an APK
-            </h2>
+            <h2>Download an APK</h2>
             <!-- APK -->
-            <span style="color: rgb(55, 55, 55); font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 19px;">
-              Occupy pinterest ethnic, blue bottle incididunt bushwick cardigan church-key yr Austin four loko american apparel salvia. Plaid labore sartorial pork belly, hoodie marfa selvage. Sustainable meggings synth, chambray wolf pickled small batch bespoke fashion axe. Cillum direct trade wes anderson odd future forage vice. Swag craft beer meggings readymade, qui disrupt elit skateboard meh tempor. Aesthetic marfa try-hard jean shorts, church-key twee swag. Nostrud before they sold out viral art party, yr narwhal hoodie sartorial keffiyeh ethical.
-            </span>
+            Occupy pinterest ethnic, blue bottle incididunt bushwick cardigan church-key yr Austin four loko american apparel salvia. Plaid labore sartorial pork belly, hoodie marfa selvage. Sustainable meggings synth, chambray wolf pickled small batch bespoke fashion axe. Cillum direct trade wes anderson odd future forage vice. Swag craft beer meggings readymade, qui disrupt elit skateboard meh tempor. Aesthetic marfa try-hard jean shorts, church-key twee swag. Nostrud before they sold out viral art party, yr narwhal hoodie sartorial keffiyeh ethical.
           </p>
+          <a href="assets/downloads/GravityBall.apk">download</a>
         </div>
       </div>
     </div>
     <hr>
     <div>
       <p style="text-align: center;">
+          <iframe src="github-btn.html?user=brianedmonds90&repo=Pong&type=watch"
+        allowtransparency="true" frameborder="0" scrolling="0" width="50" height="20"></iframe>
+        <iframe src="github-btn.html?user=brianedmonds90&repo=Pong&type=fork"
+        allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe>
+        <iframe src="github-btn.html?user=brianedmonds90&type=follow"
+        allowtransparency="true" frameborder="0" scrolling="0" width="168" height="20"></iframe>
+        <iframe src="github-btn.html?user=msandt3&type=follow"
+        allowtransparency="true" frameborder="0" scrolling="0" width="125" height="20"></iframe>
+      </p>
+      <p style="text-align: center;">
           Developed by <a href="http://www.twitter.com/mikesandt">@mikesandt</a> 
-          and <a href="http://www.twitter.com/brianedmonds90">@brianedmonds90
+          and <a href="http://www.twitter.com/brianedmonds90">@brianedmonds90</a>
+      </p>
+      <p style="text-align: center;">
+          Built with <a href="http://www.jbox2d.org/">JBox2D</a> 
+          and <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>
       </p>
     </div>
   </div>
