Fixed APK download section

--- a/downloads.html
+++ b/downloads.html
@@ -88,9 +88,9 @@
           <p>
             <h2>Download an APK</h2>
             <!-- APK -->
-            Occupy pinterest ethnic, blue bottle incididunt bushwick cardigan church-key yr Austin four loko american apparel salvia. Plaid labore sartorial pork belly, hoodie marfa selvage. Sustainable meggings synth, chambray wolf pickled small batch bespoke fashion axe. Cillum direct trade wes anderson odd future forage vice. Swag craft beer meggings readymade, qui disrupt elit skateboard meh tempor. Aesthetic marfa try-hard jean shorts, church-key twee swag. Nostrud before they sold out viral art party, yr narwhal hoodie sartorial keffiyeh ethical.
+            Download the APK file below. Simply transfer the file you your Android device's SD card and wait for it to install. Now you're ready to play Gravity Ball!
           </p>
-          <a href="assets/downloads/GravityBall.apk">download</a>
+          <a class="btn btn-success" href="downloads/GravityBall.apk">Download</a>
         </div>
       </div>
     </div>
