Download link fixed for real

--- a/downloads.html
+++ b/downloads.html
@@ -90,7 +90,7 @@
             <!-- APK -->
             Download the APK file below. Simply transfer the file you your Android device's SD card and wait for it to install. Now you're ready to play Gravity Ball!
           </p>
-          <a class="btn btn-success" href="downloads/GravityBall.apk" target="_blank">Download</a>
+          <a class="btn btn-success" href="assets/downloads/GravityBall.apk" target="_blank">Download</a>
         </div>
       </div>
     </div>
