--- a/instructions.html
+++ b/instructions.html
@@ -89,7 +89,7 @@
               <!-- INSTALLING -->
               If you havent already, either download the APK file or get the source code from GitHub if you're feeling adventurous
               <h4>The Easy Way</h4>
-              Next, plug your Android device into your computer via the USB cable provided. If you downloaded the APK file simply copy it to your device's SD card. The device should prompt you to install the application. Next, open your app drawer and launch the Gravity Ball application.
+              If you downloaded the APK simply plug your Android device into your computer via the USB cable provided. Next, copy the APK onto the device's SD card. The device should prompt you to install the application. Next, open your app drawer and launch the Gravity Ball application.
               <h4>The Harder Way</h4>
               If you decided to obtain the source code from GitHub first, please reference the downloads page for instructions on setting up your environment. Once you've completed these steps you simply need to hit run with your device plugged in!
             </p>
