PUNS ON PUNS ON PUNSSSSS

--- a/downloads.html
+++ b/downloads.html
@@ -72,9 +72,9 @@
               <h2>Compile Source From GitHub</h2>
               <!-- GitHub -->
               <h4>Setting up your Development Environment</h4>
-                First, download the Android SDK <a href="http://developer.android.com/sdk/index.html">here</a> and follow the instructions for setting up the ADT bundle or an existing IDE like Eclipse.
+                Download the Android SDK <a href="http://developer.android.com/sdk/index.html">here</a> and follow the instructions for setting up the ADT bundle or an existing IDE like Eclipse.
               <h4>Getting the Source Code</h4>
-                First make sure you have Git installed. Open a terminal and clone the repository to your local machine.
+                First make sure you have Git installed. You can git it (see what I did there?) <a href="http://git-scm.com/">here.</a> Open a terminal and clone the repository to your local machine.
                 <div class="commandwell">
                   <p>$ git clone https://github.com/brianedmonds90/Pong.git</p>
                 </div>
