Google play link up

--- a/downloads.html
+++ b/downloads.html
@@ -63,26 +63,21 @@
   <!-- CONTENT -->
   <div class="container">
     <div>
-      <h1>
-        Downloads
-      </h1>
-        <div class="well textwell">
-          <div>
-            <p>
-              <h2>Compile Source From GitHub</h2>
-              <!-- GitHub -->
-              <h4>Setting up your Development Environment</h4>
-                Download the Android SDK <a href="http://developer.android.com/sdk/index.html">here</a> and follow the instructions for setting up the ADT bundle or an existing IDE like Eclipse.
-              <h4>Getting the Source Code</h4>
-                First make sure you have Git installed. You can git it (see what I did there?) <a href="http://git-scm.com/">here.</a> Open a terminal and clone the repository to your local machine.
-                <div class="commandwell">
-                  <p>$ git clone https://github.com/brianedmonds90/Pong.git</p>
-                </div>
-              <h4>Compiling and Running</h4>
-                Assuming you're using Eclipse, simply import the source code and click run. It's really that simple!
-            </p>
-          </div>
+      <h1>Downloads</h1>
+
+      <div class="well textwell">
+        <div>
+          <p>
+            <h2>Get it on the Play Store</h2>
+            <!-- APK -->
+            Gravity Ball is available via the Play Store. If you have a linked Google account you can automatically download a signed version to your device.
+          </p>
+          <a href="https://play.google.com/store/apps/details?id=com.gravity.pong">
+            <img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png"/>
+          </a>
         </div>
+      </div>
+
       <div class="well textwell">
         <div>
           <p>
@@ -91,6 +86,24 @@
             Download the APK file below. Simply transfer the file you your Android device's SD card and wait for it to install. Now you're ready to play Gravity Ball!
           </p>
           <a class="btn btn-success" href="assets/downloads/GravityBall.apk" target="_blank">Download</a>
+        </div>
+      </div>
+
+      <div class="well textwell">
+        <div>
+          <p>
+            <h2>Compile Source From GitHub</h2>
+            <!-- GitHub -->
+            <h4>Setting up your Development Environment</h4>
+              Download the Android SDK <a href="http://developer.android.com/sdk/index.html">here</a> and follow the instructions for setting up the ADT bundle or an existing IDE like Eclipse.
+            <h4>Getting the Source Code</h4>
+              First make sure you have Git installed. You can git it (see what I did there?) <a href="http://git-scm.com/">here.</a> Open a terminal and clone the repository to your local machine.
+              <div class="commandwell">
+                <p>$ git clone https://github.com/brianedmonds90/Pong.git</p>
+              </div>
+            <h4>Compiling and Running</h4>
+              Assuming you're using Eclipse, simply import the source code and click run. It's really that simple!
+          </p>
         </div>
       </div>
     </div>
