Updated button sizes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <br></br>
               </p>
             </div>
-            <a class="btn btn-info" href="instructions.html">
+            <a class="btn-large btn-info" href="instructions.html">
               Learn More
             </a>
           </div>
@@ -106,7 +106,7 @@
                 <br></br>
               </p>
             </div>
-            <a class="btn btn-info" href="downloads.html">
+            <a class="btn-large btn-info" href="downloads.html">
               Git It!
             </a>
           </div>
@@ -126,7 +126,7 @@
                 <br></br>
               </p>
             </div>
-            <a class="btn btn-info" href="contact.html">
+            <a class="btn-large btn-info" href="contact.html">
               Contact
             </a>
           </div>
