--- a/instructions.html
+++ b/instructions.html
@@ -93,7 +93,7 @@
               <h4>The Harder Way</h4>
               If you decided to obtain the source code from GitHub first, please reference the downloads page for instructions on setting up your environment. Once you've completed these steps you simply need to hit run with your device plugged in!
             </p>
-            <a class="btn btn-info" href="downloads.html">
+            <a class="btn-large btn-info" href="downloads.html">
               Downloads
             </a>
           </div>
